[package]
name = "content-sync"
version = "0.1.0"
edition = "2021"
description = "CLI to watch local files and bidirectionally sync raw content to SQL/Mongo databases"
authors = ["content-sync"]
license = "MIT"

[[bin]]
name = "content-sync"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Web server
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
axum-extra = { version = "0.10", features = ["typed-header", "cookie"] }

# HTTP client (Bunny SQL API)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Local SQLite
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# File watching
notify = "7"
notify-debouncer-mini = "0.5"

# Auth / crypto
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
base64 = "0.22"
url = "2"
mime_guess = "2"
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
libsql = { version = "0.9.30", features = ["remote", "tls"], default-features = false }
sqlx = { version = "0.9", default-features = false, features = ["runtime-tokio", "postgres", "mysql", "sqlite", "sqlite-bundled"] }
mongodb = "3"
futures-util = "0.3.33"

[profile.release]
lto = true
codegen-units = 1
strip = true
